# mtl-tools

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AI_FIRST.md  Dockerfile  MyMTLWalletBot_callbacks.py  MyMTLWalletBot_handlers.py  MyMTLWalletBot_main.py  MyMTLWalletBot_start.py  MyMTLWalletBot_stellar.py  README.md  TESTING.md  app_logger.py  bod_exchange.py  check_stellar.py  config_reader.py  dialog.py  docker-compose.yml  fb.py  gspread_tools.py  justfile  keyrate.py  models.py  mtl_backup.py  mtl_bot_first_handlers.py  mtl_bot_main.py  mtl_bot_poll_handlers.py  mtl_bot_start.py  mtl_bot_state_handlers.py  mtl_bot_talk_handlers.py  mtl_bot_time_handlers.py  mtl_exchange.py  mtl_exchange2.py  mystellar.py  mystellar2.py  mystellar3.py  mytypes.py  pyproject.toml  (+18 more)
.github/workflows/: ci.yml
db/: fb.py  models.py  mongo.py  quik_pool.py  requests.py  session.py  tinydb_requests.py
db/repositories/: __init__.py  base.py  chats.py  config.py  finance.py  messages.py  payments.py  wallets.py
deploy/: check_ledger.service  skynet_bot.service  structure.py
docs/: architecture.md  conventions.md  glossary.md
docs/contracts/: README.md  skynet-helper-taken-closed.md  skynet-mmwb-ping-pong.md
docs/exec-plans/: TEMPLATE.md
docs/plans/: 2026-01-27-uv-migration-design.md  2026-01-27-uv-migration-plan.md
docs/runbooks/: how-to-manage-exec-plan.md
jsons/: en.json  ru.json
llm/: llm_grist.py  llm_main.py  llm_stellar.py  llm_test.py
middlewares/: app_context.py  db.py  emoji_reaction.py  message_thread_cache.py  sentry_error_handler.py  throttling.py  user_resolver.py
other/: aiogram_tools.py  antispam_logic.py  cache_tools.py  config_reader.py  constants.py  converter.py  global_data.py  grist_tools.py  group_tools.py  gspread_tools.py  img_tools.py  keyrate.py  loguru_tools.py  miniapps_tools.py  monitoring_contracts.py  mtl_tools.py  mytypes.py  open_ai_tools.py  openrouter_reactions.py  openrouter_service.py  pyro_tools.py  spam_cheker.py  stellar_tools.py  support_tools.py  telegraph_tools.py  text_tools.py  timedelta.py  utils.py  web_tools.py
other/stellar/: __init__.py  address_utils.py  asset_xdr.py  balance_utils.py  constants.py  display_commands.py  dividend_calc.py  dividend_commands.py  exchange_utils.py  monitoring.py  payment_service.py  sdk_utils.py  utils.py  voting_utils.py  xdr_utils.py
routers/: admin.py  admin_core.py  admin_panel.py  admin_system.py  airdrops.py  all.py  inline.py  last_handler.py  mic.py  moderation.py  monitoring.py  multi_handler.py  polls.py  rely_router.py  secretary_mtla.py  start.py  start_router.py  stellar.py  talk_handlers.py  time_handlers.py  welcome.py
scripts/: check_ledger.py  check_stellar.py  mtl_backup.py  mtl_exchange.py  mtl_exchange2.py  update_data.py  update_report.py
services/: admin_service.py  app_context.py  bot_state_service.py  channel_link_service.py  command_registry_service.py  config_service.py  database_service.py  external_services.py  feature_flags.py  group_service.py  health_server.py  message_thread_cache.py  notification_service.py  skyuser.py  spam_status_service.py  stellar_notification_service.py  telegram_utils.py  user_service.py  voting_service.py
services/interfaces/: __init__.py  external.py  repositories.py  stellar_sdk.py  stellar_service.py
services/repositories/: __init__.py  chats_repo_adapter.py
shared/domain/: __init__.py  config.py  dividend.py  payment.py  user.py
tests/: conftest.py  fakes.py  test_admin_core.py  test_admin_system.py  test_airdrops_e2e.py  test_app_lifecycle.py  test_config_reader.py  test_inline.py  test_last_handler.py  test_moderation.py  test_monitoring.py  test_multi_handler.py  test_openrouter_reactions.py  test_polls.py  test_protocol_fakes.py  test_rely_router.py  test_start_router.py  test_stellar.py  test_talk_handlers.py  test_time_handlers.py  test_welcome.py
tests/db/: test_database_service.py  test_repositories.py
tests/integration/: __init__.py  test_clean_architecture.py
tests/middlewares/: test_emoji_reaction.py  test_user_resolver.py
tests/other/: __init__.py  test_aiogram_tools.py  test_antispam_logic.py  test_monitoring_contracts.py
tests/routers/: test_admin_core.py  test_admin_panel.py  test_admin_system.py  test_airdrops.py  test_inline.py  test_last_handler.py  test_mic.py  (+10 more)
tmpdocs/: mocked_aiogram.py
utils/: aiogram_utils.py  config_reader.py  converter.py  dialog.py  global_data.py  grist_tools.py  gspread_tools.py  img_tools.py  keyrate.py  mtl_tools.py  mystellar.py  mystellar2.py  mystellar3.py  mytypes.py  pyro_tools.py  sp_tools.py  spam_cheker.py  stellar_utils.py  support_tools.py  telegraph_tools.py  timedelta.py
(+61 files in other folders)
