[project]
name = "skynet-bot"
version = "1.0.0"
description = "Telegram bot for MTL ecosystem with Stellar integration"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0",
    "alembic>=1.13.0",
    "aiohttp>=3.11.0",
    "apscheduler>=3.10.0",
    "gspread>=5.7.0",
    "gspread-asyncio>=1.8.0",
    "httpx>=0.28.0",
    "kurigram>=2.2.0",
    "loguru>=0.7.0",
    "oauth2client>=4.1.0",
    "openai>=2.15.0",
    "openrouter>=0.1.0",
    "pillow>=10.3.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "python-dateutil>=2.8.0",
    "redis>=5.1.0",
    "requests>=2.32.0",
    "sentry-sdk>=1.45.0",
    "sqlalchemy>=2.0.28",
    "stellar-sdk[aiohttp]>=11.1.0",
    "tiktoken>=0.12.0",
    "uvloop>=0.21.0",
    "google-api-python-client>=2.188.0",
    "numpy>=2.4.1",
    "tgcrypto>=1.2.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.5.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.schedulers.asyncio",
    "requests",
]
ignore_missing_imports = true
