[project]
name = "skynet-bot"
version = "1.0.0"
description = "Telegram bot for MTL ecosystem with Stellar integration"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0",
    "alembic>=1.13.0",
    "aiohttp>=3.11.0",
    "apscheduler>=3.10.0",
    "gspread>=5.7.0",
    "gspread-asyncio>=1.8.0",
    "httpx>=0.28.0",
    "kurigram>=2.2.0",
    "loguru>=0.7.0",
    "oauth2client>=4.1.0",
    "openai>=2.15.0",
    "openrouter>=0.1.0",
    "pillow>=10.3.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "python-dateutil>=2.8.0",
    "redis>=5.1.0",
    "requests>=2.32.0",
    "sentry-sdk>=1.45.0",
    "sqlalchemy>=2.0.28",
    "stellar-sdk[aiohttp]>=11.1.0",
    "tiktoken>=0.12.0",
    "uvloop>=0.21.0",
    "google-api-python-client>=2.188.0",
    "numpy>=2.4.1",
    "tgcrypto>=1.2.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.5.0",
    "ruff>=0.11.0",
    "types-python-dateutil>=2.9.0.20260124",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
no_implicit_optional = false

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "requests",
    "gspread.*",
    "gspread_asyncio.*",
    "oauth2client.*",
    "openai.*",
    "openrouter.*",
    "kurigram.*",
    "pyrogram.*",
    "redis.*",
    "sentry_sdk.*",
    "PIL.*",
    "tiktoken.*",
    "googleapiclient.*",
    "google.*",
    "environs",
]
ignore_missing_imports = true

# Temporarily ignore complex files (TODO: fix types gradually)
[[tool.mypy.overrides]]
module = [
    # Stellar - complex typing with stellar-sdk
    "other.stellar.xdr_utils",
    "other.stellar.dividend_commands",
    "other.stellar.voting_utils",
    "other.stellar.asset_xdr",
    "other.stellar.monitoring",
    "other.stellar.display_commands",
    "other.stellar.utils",
    "other.stellar.exchange_utils",
    "other.stellar.balance_utils",
    "other.stellar.dividend_calc",
    # Pyrogram - dynamic types
    "other.pyro_tools",
    # Routers - need gradual typing
    "routers.last_handler",
    "routers.admin_core",
    "routers.polls",
    "routers.stellar",
    "routers.talk_handlers",
    "routers.welcome",
    "routers.admin_panel",
    "routers.admin_system",
    "routers.moderation",
    "routers.airdrops",
    "routers.time_handlers",
    "routers.start_router",
    "routers.multi_handler",
    "routers.rely_router",
    "routers.inline",
    # DB - need SQLAlchemy 2.0 Mapped[] refactor
    "shared.infrastructure.database.models",
    "shared.infrastructure.database.alembic.*",
    "db.repositories.chats",
    "db.repositories.config",
    "db.repositories.payments",
    "db.repositories.finance",
    "db.repositories.wallets",
    # Services
    "services.database_service",
    "services.config_service",
    # Middlewares
    "middlewares.throttling",
    "middlewares.emoji_reaction",
    # Other tools
    "other.grist_tools",
    "other.loguru_tools",
    "other.open_ai_tools",
    # Tests and scripts
    "scripts.*",
    "tests.*",
    "test",
    "test2",
    "test3",
]
ignore_errors = true
